--- a/src/components/Planned/planner.css
+++ b/src/components/Planned/planner.css
@@ -16,7 +16,7 @@
 
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
 
     gap: 10px;
     margin-bottom: 10px;
@@ -33,7 +33,6 @@
     color: white;
 
     padding: 10px 20px;
-    margin-left: 10px;
 }
 
 #time-input {
@@ -74,7 +73,20 @@
 @media (max-width: 450px) {
     .planner-input {
         flex-direction: column;
-        height: 150px;
+        align-items: center;
+        height: 170px;
+    }
+
+    #time-input {
+        width: 168px;
+    }
+
+    #date-input {
+        width: 166px;
+    }
+    
+    #planner-added {
+        width: 182px;
     }
 }
 
@@ -137,26 +149,27 @@
 
 .notification {
     width: 300px;
-    padding: 20px;
+    padding: 10px 20px;
 
     border-style: solid;
     border-width: 1px;
     border-color: rgba(255, 255, 255, 0.1);
 
     border-radius: 4px;
-    background: rgb(15, 22, 40);
-    color: white;
+    background: rgb(231, 238, 255);
+    color: black;
 
     position: fixed;
-    top: 10px;
-    left: 10px;
+    top: 20px;
+    left: 20px;
 
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
 
     z-index: 2;
 
-    transform: translateX(-100vw);
+    transform: translateX(-200vw);
     transition-duration: 0.5s;
+    font-family: 'Poppins', sans-serif;
 }
 
 .transform-notification {
